--- a/deployment.yml
+++ b/deployment.yml
@@ -27,6 +27,8 @@ spec:
       labels:
         app: nexus
     spec:
+      securityContext:
+        fsGroup: 200 
       containers:
       - name: nexus
         image: sonatype/nexus3:latest
