--- a/deployment.yml
+++ b/deployment.yml
@@ -35,6 +35,7 @@ spec:
         ports:
         - containerPort: 8081
         - containerPort: 8082
+        - containerPort: 443
         volumeMounts:
         - name: nexus-data
           mountPath: /nexus-data
@@ -69,4 +70,8 @@ spec:
       protocol: TCP
       port: 8082
       targetPort: 8082
+    - name: https
+      protocol: TCP
+      port: 443
+      targetPort: 443
   type: LoadBalancer  # Use ClusterIP if accessed only within AKS
