--- a/deployment.yml
+++ b/deployment.yml
@@ -19,6 +19,8 @@ metadata:
   namespace: nexus
 spec:
   replicas: 1
+  strategy:
+    type: Recreate
   selector:
     matchLabels:
       app: nexus
